--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 		<div class="container">
     		<div class="blurb">coding
         		<h1>Hi there, I'm Mengnan Chen!</h1>
-				<p>This is the my personal website to record my learning path in coding.</p>
-				<p><a href="/about">Read more about my life...</a></p>
+				<p>This is the my personal website to record my learning path in coding. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
