--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     		</ul>
 		</nav>
 		<div class="container">
-    		<div class="blurb">coding
+    		<div class="blurb">
         		<h1>Hi there, I'm Mengnan Chen!</h1>
 				<p>This is the my personal website to record my learning path in coding. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
