--- a/index.html
+++ b/index.html
@@ -23,11 +23,8 @@
 				</p>
 			</div><!-- /.blurb -->
 			<div class="blurb">
-				<h1>c++中map与unordered_map的区别</h1>
+				<h2>difference between #include < map > and #include < unordered_map > in C++ </h2>
 				<p>
-					头文件
-					map: #include < map >
-					unordered_map: #include < unordered_map >
 					内部实现机理
 					map： map内部实现了一个红黑树，该结构具有自动排序的功能，因此map内部的所有元素都是有序的，红黑树的每一个节点都代表着map的一个元素，因此，对于map进行的查找，删除，添加等一系列的操作都相当于是对红黑树进行这样的操作，故红黑树的效率决定了map的效率。
 					unordered_map: unordered_map内部实现了一个哈希表，因此其元素的排列顺序是杂乱的，无序的
@@ -47,9 +44,6 @@
 					适用处，对于查找问题，unordered_map会更加高效一些，因此遇到查找问题，常会考虑一下用unordered_map
 					note:
 					对于unordered_map或者unordered_set容器，其遍历顺序与创建该容器时输入元素的顺序是不一定一致的，遍历是按照哈希表从前往后依次遍历的
-					————————————————
-					版权声明：本文为CSDN博主「wolfrevoda」的原创文章，遵循CC 4.0 BY-SA版权协议，转载请附上原文出处链接及本声明。
-					原文链接：https://blog.csdn.net/batuwuhanpei/java/article/details/50727227
 				</p>
 			</div><!-- /.blurb -->
 		</div><!-- /.container -->
